# trix2

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  Procfile  README.md  fabfile.py  init_db.sql  manage.py  pyproject.toml  setup.py  tasks.py  tox.ini  trix_settings.py
docs/: .gitignore  README.txt  conf.py  fabfile.py  index.rst  tasks.py
docs/_static/: README.txt
docs/administrator/: add_admin.rst  add_course.rst  add_edit_assignments.rst  add_period.rst  gettingstarted.rst  index.rst
docs/develop/: codeguidelines.rst  databasedumps.rst  development.rst  docs.rst  gettingstarted.rst  git.rst  index.rst  release.rst
docs/editor/: bulkedit.rst  index.rst
docs/student/: gettingstarted.rst  index.rst
docs/superuser/: add_admin.rst  add_period.rst  addremove_superuser.rst  administer_course.rst  gettingstarted.rst  index.rst
docs/sysadmin/: deploy.rst  heroku.rst  index.rst
docs/user/: bulkedit.rst  index.rst  markdown.rst
requirements/: common.txt  deployment.txt  develop.txt  production.txt
scripts/: student_statistics.py
trix/: version.py
trix/project/: settingsproxy.py
trix/project/default/: default_urls.py  settings.py  templatecontext.py
trix/project/develop/: developtasks.py  urls.py
trix/project/production/: herokudemosettings.py  settings.py  urls.py
trix/trix_admin/: README.md  cradmin.py  css_icon_map.py  editor_widget.py  formfields.py
trix/trix_admin/templatetags/: trix_admin_tags.py
trix/trix_admin/tests/: test_assignments.py
trix/trix_admin/views/: assignments.py  dashboard.py  markdown_help.py  permalinks.py  roleselect.py  statistics.py
trix/trix_auth/: README.md  __init__.py  allauth_adapter.py  apps.py  urls.py
trix/trix_auth/backend/: authentication.py
trix/trix_auth/views/: allauth_views.py  login.py
trix/trix_core/: README.md  admin.py  api.py  apps.py  fabfile.py  models.py  multiassignment_serialize.py  multiassignmentedit.py  tagutils.py  trix_markdown.py  urls.py
trix/trix_core/migrations/: 0001_initial.py  0002_assignment_hidden.py  0004_user_fix.py  (+6 more)
trix/trix_course/: README.md  urls.py
trix/trix_student/: README.md  urls.py
trix/utils/: template.py
trix2/: version.py
(+132 files in other folders)
