[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trix"
requires-python = ">=3.10.0"
dynamic = ["version"]
description = "Next generation Trix. Detailed task control and statistics app for better learning outcome."
readme = { file = "README.md", content-type = "text/markdown" }
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
    { name = "Tor Johansen", email = "tor@appresso.no" },
    { name = "Espen Angell Kristiansen", email = "espen@appresso.no" },
    { name = "Jonas Sandbekk", email = "jonassandbekk@gmail.com" },
    { name = "Torgeir Lebesbye" },
]
urls = { Homepage = "https://github.com/devilry/trix2" }

dependencies = [
    "django==4.2.*",
    "django-extensions",
    "django-crispy-forms>=1.13.0, <=1.14.0",
    "Markdown>=3.4.1",
    "Pygments==2.15.0",
    "PyYAML>=6.0",
    "cradmin-legacy>=5.0.0",
    "django-allauth[socialaccount]==65.3.*",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]

[project.optional-dependencies]
develop = [
    "psycopg2-binary==2.9.*",

    # For automating development tasks
    "invoke==1.7.3",

    # For test/CI automation
    "flake8>=3.9.2",
    "tox==3.27.1",

    # Required by sphinx
    "Jinja2>=3.0.3",
    "Sphinx==5.3.0",
    "sphinxcontrib-napoleon==0.7",
    "sphinx_rtd_theme==1.1.1",

    # Easier to work with databases during development
    "django_dbdev==1.2.3",
    "sh==1.14.3",
    "python-dateutil==2.8.2",

    # Better Django shell and other utils for development
    "ipython>=7.16.3",

    # For mocking tests
    "mock==4.0.3",

    # For debugging
    "django-debug-toolbar>=3.2.4",

    # For cradmin
    "ievv-opensource==9.2.3",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["ez_setup"]

[tool.setuptools.dynamic]
version = { attr = "trix.version.__version__" }
